# pyjira

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh  steps_to_productize.md  test.csv  tutorial.md
.github/workflows/: ci.yml  test.yml
docs/: tutorial.md
jira_cli/: cli.py  client.py  config.py  exceptions.py  formatters.py  logger.py
pyjira/: cli.py  config.py  exceptions.py  logger.py
tests/: conftest.py  test_cli.py  test_e2e.py
