[tool.poetry]
name = "jira-cli"
version = "1.0.0"
description = "Command line interface for Jira"
authors = ["Kevin <kevinchwong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.0"
jira = "^3.5.1"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
rich = "^13.7.0"

[tool.poetry.scripts]
jira = "jira_cli.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 