[tool.poetry]
name = "pyjira"
version = "0.1.0"
description = "A command-line interface for interacting with Jira"
authors = ["Kevin Wong <kevinchwong@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kevinchwong/pyjira"
repository = "https://github.com/kevinchwong/pyjira.git"
documentation = "https://github.com/kevinchwong/pyjira#readme"
packages = [{include = "pyjira"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Bug Tracking",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "^8.0.0"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
rich = "^10.0.0"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
jira = "^3.5.1"
PyYAML = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.0.0"
isort = "^5.0.0"
mypy = "^0.900"

[tool.poetry.scripts]
jira = "pyjira.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = """
    -v
    --cov=pyjira
    --cov-report=term-missing
    -p no:warnings
"""
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true